src/scripting/snapshots/ssg__scripting__parser__tests__parse_extend.snap
---
source: src/scripting/parser.rs
expression: ast
---
[
    Extend {
        template: ByteOffsetSnapshot {
            end: 21,
            start: 11,
            content: "_base.html",
        },
        offset: ByteOffsetSnapshot {
            end: 25,
            start: 0,
            content: "{{ extend \"_base.html\" }}",
        },
        content: "{{ extend \"_base.html\" }}",
    },
]
