src/scripting/snapshots/ssg__scripting__parser__tests__parse_var_identifier.snap
---
source: src/scripting/parser.rs
expression: ast
---
Ast {
    source: "{{ var_name := something_else }}",
    nodes: [
        Variable {
            ident: ByteOffset {
                start: 3,
                end: 11,
            },
            value: Identifier(
                ByteOffset {
                    start: 15,
                    end: 29,
                },
            ),
        },
    ],
}
