src/scripting/snapshots/ssg__scripting__parser__tests__parse_var_number.snap
---
source: src/scripting/parser.rs
expression: ast
---
Ast {
    source: "{{ var_name := 1337 }}",
    nodes: [
        Variable {
            ident: ByteOffset {
                start: 3,
                end: 11,
            },
            value: IntLiteral(
                ByteOffset {
                    start: 15,
                    end: 19,
                },
            ),
        },
    ],
}
