src/scripting/snapshots/ssg__scripting__parser__tests__parse_var_string.snap
---
source: src/scripting/parser.rs
expression: ast
---
Ast {
    source: "{{ var_name := \"hello\" }}",
    nodes: [
        Variable {
            ident: ByteOffset {
                start: 3,
                end: 11,
            },
            value: StringLiteral(
                ByteOffset {
                    start: 16,
                    end: 21,
                },
            ),
        },
    ],
}
