src/scripting/snapshots/ssg__scripting__parser__tests__sample.snap
---
source: src/scripting/parser.rs
expression: ast
---
Ast {
    source: "{{ var_name }}",
    nodes: [
        Identifier(
            ByteOffset {
                start: 3,
                end: 11,
            },
        ),
    ],
}
